Changelog and remarks

## 3 aug 2021

main_weekly.py
Moved all configurations to a configuration file, configuration_weekly.py
Created an option in the configuration file (calculateUpstreamTotals) which switches on or off the extra accu operations in subsurfacwateronelayer.py as well as interceptionuptomaxstore.py, which are only used for reporting (or possibly for budget checks).

main.py
Created an option in the configuration file (calculateUpstreamTotals) which switches on or off the extra accu operations in subsurfacwateronelayer.py as well as interceptionuptomaxstore.py, which are only used for reporting (or possibly for budget checks). They are also used for numpy reports but this was not tested thus far.

## 6 July 2021

Test for github

## 19 May 2021

Added main_weekly.py to the repo


## 21 March 2013

Create scenarios in pyhydroScenarios

Swaps:

swapAll:
 alles op True

swapVeg:
 ** Op true:
 leafAreaIndex=generalfunctions.swapValuesOfTwoRegions(areas,leafAreaIndex,True)
 albedo=generalfunctions.swapValuesOfTwoRegions(areas,albedo,True)
 maxStomatalConductance=generalfunctions.swapValuesOfTwoRegions(areas,maxStomatalConductance,True)
 vegetationHeight=generalfunctions.swapValuesOfTwoRegions(areas,vegetationHeight,True)

 ** Op false
 regolithThicknessHomogeneous=generalfunctions.swapValuesOfTwoRegions(areas,regolithThicknessHomogeneous,False)
 initialSoilMoistureFractionFromDisk=generalfunctions.swapValuesOfTwoRegions(areas,initialSoilMoistureFractionFromDisk,False)
 soilPorosityFraction=generalfunctions.swapValuesOfTwoRegions(areas,soilPorosityFraction,False)
 limitingPointFraction=generalfunctions.swapValuesOfTwoRegions(areas,limitingPointFraction,False)
 mergeWiltingPointFractionFS=generalfunctions.swapValuesOfTwoRegions(areas,mergeWiltingPointFractionFS,False)
 fieldCapacityFraction=generalfunctions.swapValuesOfTwoRegions(areas,fieldCapacityFraction,False)



## 18 Februari 2013

Copied two new input maps from Noemi's directory
